--- a/Organizing datasets.Rmd
+++ b/Organizing datasets.Rmd
@@ -15,10 +15,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Organisation des jeux de données pour le prototype de rapport comparatif
-Ce script servira à organiser / explorer les jeux de données qui seront plus tard utilisés pour créer le prototype de rapport sectoriel.  Aussi, les figures et tables qui seraient présentées seront esquissées dans ce script.
+Ce script servira à organiser / explorer les jeux de données qui seront plus tard utilisés pour créer le prototype de rapport sectoriel.  Aussi, les figures et tables qui seraient présentées seront esquissées dans un autre script.
   
 D'abbord, nous pouvons importer et regrouper les jeux de données (n=3) contenant les ventes vétérinaires 2016-2018, 2019 et 2020. Le jeu de données 2016-2018 contient en fait les données de janvier 2016 à fin février 2019. Le jeu 2020 contenait janvier 2020 à fin décembre 2020. Le jeu 2019 est un jeu de données fictif, ce sont les données mars à décembre 2020, recodées de tel sorte que ce semble être les données de la même période en 2019 (i.e., date=date-365).  
-  
+    
 Ces fichiers de ventes vétérinaires ont été générées à partir d'une extraction des données Vet expert. Le script C# `ExecutablesV3.3` a été utilisé avec la table de conversion `Conversion_Table_2022-05-12.xlsx` afin d'identifier les antibiotiques et de calculer les g, DDD et DCD. La qualité de la table de conversion à été vérifiée à l'aide d'une recherche des unités de ventes non-codées. Un certains nombre de lignes correspondant à des antibiotiques, mais pour lesquelles la quantité est impossible à déterminer (e.g., 2 doses) ne sont pas transformées en g, DDD et DCD. Leur nombre exact pourra être compilé plus loin.  
   
 Pour le moment, toutes les lignes de ventes (antibiotiques ou non) on été conservées.
@@ -35,7 +35,7 @@ data <- rbind(v1, v2, v3)
 
 ```
   
-Ensuite, on devra assigner les numéros de fermes dans la base de données contenant les ventes d'antibiotiques en se basant sur les identifications de fermes. Pour ça, je dois importer la table qui contient les liens entres les NIM et numéros de projets. Ici, je garde cette partie du code "cachée" afin d'éviter les bris de confidentialité.  
+Ensuite, on devra assigner les numéros de fermes dans la base de données contenant les ventes d'antibiotiques en se basant sur les identifications de fermes. Pour ça, nous devons importer la table qui contient les liens entres les NIM et numéros de projets. Ici, nous gardons cette partie du script "cachée" afin d'éviter les bris de confidentialité. Nous avons aussi déjà exclu une première ferme (ferme #88) qui avait un problème majeur lors de l'extraction des données 2016-2018 (problème Sysvet de mémoire).  
   
 ```{r, echo=FALSE, results=FALSE, fig.cap="Nombre de lignes de ventes **totales** par ferme."}
 #options(scipen=999)
@@ -97,7 +97,7 @@ data5$No.ferme <- factor(data5$No.ferme)
 
 ```
   
-Il y aurait 16 fermes qui n'étaient plus suivies en 2020: 1, 12, 14, 15, 21, 23, 24, 28, 31, 32, 48, 57, 69, 73, 83, 102. Je les retire:
+Il y aurait 16 fermes qui n'étaient plus suivies en 2020: 1, 12, 14, 15, 21, 23, 24, 28, 31, 32, 48, 57, 69, 73, 83, 102. Nous les retitons:
 ```{r}
 Ventes <- subset(data5, (No.ferme!=1 & No.ferme!=12 & No.ferme!=14 & No.ferme!=15 & No.ferme!=21 & No.ferme!=23 & No.ferme!=24 & No.ferme!=28 & No.ferme!=31 & No.ferme!=32 & No.ferme!=48 & No.ferme!=57 & No.ferme!=69 & No.ferme!=73 & No.ferme!=83 & No.ferme!=102))
 ```
@@ -135,21 +135,24 @@ AMU <- subset(AMU, ROUTE!=0)
 dim(AMU)
 ```
   
-À partir d'ici, il faudra additionner, par année et pour chaque ferme la quantité d'antibiotique utilisé. **Quelques décisions à discuter:**  
+À partir d'ici, il faudra additionner, par année et pour chaque ferme la quantité d'antibiotique utilisé. **Voici quelques décisions qui ont été prises en groupe:**  
   
-- On pourrait laisser aux lecteurs le choix de l'unité utilisée pour lire le rapport. Personnellement, étant donné la manière dont les antibiotiques sont utilisés en production laitière et la manière dont les indices sont calculés:  
-  1. Mon premier choix serait de ne présenter que DCDbovCA (traitements standardisés).  
-  2. Alternativement, ont pourrait présenter DCDbovCA par défaut et permettre à l'utilisateur de changer à DDDbovCA (dose journalière). Le désavantage des DDDbovCA réside dans le calcul des traitements au tarissement (qui est plutôt empirique pour cette utilisation) et, à un moindre degré, pour les autres antibiotiques à longue action.  
-  3. Je crois qu'on ne devrait simplement pas présenter en g. C'est une unité qui ne fait pas de sens concernant l'AMU/l'AMR sauf dans les cas où il est impossible d'obtenir des données en DCD ou DDD (ce qui n'est pas le cas ici).  
+- On pourrait laisser aux lecteurs le choix de l'unité utilisée pour lire le rapport. Nouys avons décidé de laisser le choix aux lecteurs entre DCDbovCA (traitements standardisés) et DDDbovCA (dose journalière). 
     
-- On pourrait d'office présenter une figure sur l'utilisation totale et 3 figures présentant l'utilisation par catégories (I, II et III seulement). Pour les catégorie IV, il s'agit principalement du Monensin, du Lasalocide sodique et de la Novobiocine. Pour l'instant, le Monensin se retrouve surtout dans les aliments (prescriptions alimentaires) et un peu dans les ventes (bolus). La compilation du Monensin dans les données de ventes est donc parcellaire. Le lasalocide sodique sera presque entièrement dans les données de prescriptions alimentaires. Je crois donc qu'il faut éviter de compiler les catégories IV et, surtout, de les compiler dans le total (puisque ce sera incomplet). Étant donné leur faible importance, c'est beaucoup plus simple, à ce stade. de les exclure des calculs.  
+- On pourrait d'office présenter une figure sur l'**utilisation totale** et 3 figures présentant l'**utilisation par catégories** (I, II et III seulement). Pour les catégorie IV, il s'agit principalement du Monensin et du Lasalocide sodique. Pour l'instant, le Monensin se retrouve surtout dans les aliments (prescriptions alimentaires) et un peu dans les ventes (bolus). La compilation du Monensin dans les données de ventes est donc parcellaire. Le lasalocide sodique sera presque entièrement dans les données de prescriptions alimentaires. Je crois donc qu'il faut éviter de compiler les catégories IV et, surtout, de les compiler dans le total (puisque ce sera incomplet). Étant donné leur faible importance, c'est beaucoup plus simple, à ce stade. de les exclure des calculs.  
   
-- Pour ce qui est des voies d'administration, ont pourrait permettre aux lecteurs "d'exploser" ou non les 4 figures précédentes par voie d'administration?
+- Une figure **par voie d'administration** sera également disponible, de même que des figures par **familles d'antibiotiques** et **par molécule**. 
   
--Techniquement, si ont s'entend sur les indices à utiliser et les figures à présenter, je crois que ce serait plus simple de compiler les indices par ferme, par année ici, puis de générer le script pour l'interface qui sera alors plus rapide (i.e., plus réactif). Sinon, avec une base de données complète, l'interface pourrait être lente.
+- Au dénominateur, nous standardiserons les taux d'AMU par nombre de vaches adultes (lactation + taries).  
+  
+- La novobiocine n'est pas présentement catégorisée par Santé Canada. Aussi, les produits bovins contenant de la novobiocine ont tous été discontinués. Cette molécule ne sera donc pas compilée dans le rapport.  
+  
+- Techniquement, ce serait plus simple de compiler les indices par ferme, par année ici, puis de générer et sauvegarder les figures. Le script pour l'interface aura alors seulement à "appeller" les bonnes figures et sera alors plus rapide (i.e., plus réactif). Sinon, avec une base de données complète, et/ou la génération des figures dans l'interface, l'interface pourrait être lente.
 
 ## Calculs des indices pré-interface
 Je vais donc déjà calculer les différents indices d'intérêt dans les lignes suivantes.
+
+###
 ```{r}
 #First summarize by farm, year and administration route. This will be the table with the maximum possibilities in term of exploding the data.
 Agg.amu <- setNames(
@@ -183,6 +186,7 @@ Agg.amu <- setNames(
           AMU$SULFAMERAZINE_DCD, 
           AMU$SULFAGUANIDINE_DCD, 
           AMU$SUCCINYLSULFATHIAZOLE_DCD,
+          AMU$FLORFENICOL_DCD,
          
           AMU$TYLOSIN_DDD, 
           AMU$CHLORTETRACYCLINE_DDD, 
@@ -212,7 +216,8 @@ Agg.amu <- setNames(
           AMU$NEOMYCIN_SULF_DDD, 
           AMU$SULFAMERAZINE_DDD, 
           AMU$SULFAGUANIDINE_DDD, 
-          AMU$SUCCINYLSULFATHIAZOLE_DDD
+          AMU$SUCCINYLSULFATHIAZOLE_DDD,
+          AMU$FLORFENICOL_DDD
           ), 
     by=list(AMU$Year, AMU$No.ferme, AMU$ROUTE), FUN=sum),
   c( "Year",
@@ -247,6 +252,7 @@ Agg.amu <- setNames(
      "SULFAMERAZINE_DCD", 
      "SULFAGUANIDINE_DCD", 
      "SUCCINYLSULFATHIAZOLE_DCD",
+     "FLORFENICOL_DCD",
      
      "TYLOSIN_DDD",
      "CHLORTETRACYCLINE_DDD",
@@ -276,11 +282,21 @@ Agg.amu <- setNames(
      "NEOMYCIN_SULF_DDD", 
      "SULFAMERAZINE_DDD", 
      "SULFAGUANIDINE_DDD", 
-     "SUCCINYLSULFATHIAZOLE_DDD"))
+     "SUCCINYLSULFATHIAZOLE_DDD",
+     "FLORFENICOL_DDD"))
 
 ```
   
-En compilant, **il y aura parfois des "retour de produits" un certaine année, sans achat dans cette catégorie, ce qui occasionnera des DDD et DCD négatives pour certaines ferme-année (1 ou 2 ferme-années dans le jeu de données de 85 troupeau et 4 années). À ce stade, je crois qu'on devrait les écarter.** À noter, cela arrive ici parce que nous sommes en produits compilés par molécule, par ferme, par année et par voie d'administration; il y a donc parfois très peu de produits dans une catégorie donnée. Plus loin, lorsqu'on compilera par ferme-année, ce sera moins problématique.
+En compilant, **il y aura parfois des "retour de produits" un certaine année, sans achat dans cette catégorie, ce qui occasionnera des DDD et DCD négatives pour certaines ferme-année (1 ou 2 ferme-années dans le jeu de données de 85 troupeau et 4 années). À ce stade, nous avons décidé de les écarter.** À noter, cela arrive ici parce que nous sommes en produits compilés par molécule, par ferme, par année et par voie d'administration; il y a donc parfois très peu de produits dans une catégorie donnée. Plus loin, lorsqu'on compilera par ferme-année, ce sera moins problématique.  
+  
+Nombre de lignes négatives (sur 1685 lignes):  
+- 17900 2 fermes 1 an  
+- Cefa IU 1 ferme 1 an  
+- Cefa IM-L 2 fermes 1 an  
+- Oxytet Inj 2 fermes 1 an  
+- Tulathro Inj 1 ferme  
+- Gamithro Inj 1 ferme  
+- Sulfa oral 1 ferme  
   
 ```{r}
 Agg.amu.pos <- Agg.amu
@@ -310,7 +326,8 @@ max.agg.amu <- merge(
   
 
 ## Calcul des indices pour la table ferme-année-route et ferme-année 
-Deux tables seront nécessaires pour les calculs. Une avec les données par ferme-année (qui servira pour la plupart des figures de base), une autre avec les données par ferme-année-route d'administration (pour l'explosion des données par voie d'administration). Alternativement, la première table pourrait être compilée à l'interieur du script `Shiny` produisant l'interface.
+Deux tables seront nécessaires pour les calculs. Une avec les données par ferme-année (qui servira pour la plupart des figures de base), une autre avec les données par ferme-année-route d'administration (pour l'explosion des données par voie d'administration). 
+
 
 ### Utilisation par ferme, année et voie d'administration
   
@@ -329,20 +346,76 @@ max.agg.amu$cat2_DCD <- max.agg.amu$GAMITROMYCIN_DCD+max.agg.amu$TILDIPIROSIN_DC
 max.agg.amu$cat2_DDD <- max.agg.amu$GAMITROMYCIN_DDD+max.agg.amu$TILDIPIROSIN_DDD+max.agg.amu$TILMICOSIN_DDD+max.agg.amu$TULATHROMYCIN_DDD+max.agg.amu$TYLOSIN_DDD+max.agg.amu$DIHYDROSTREPTOMYCIN_DDD+max.agg.amu$NEOMYCIN_SULF_DDD+max.agg.amu$STREPTOMYCIN_SULF_DDD+max.agg.amu$AMPICILLIN_DDD+max.agg.amu$CEFAPIRIN_DDD+max.agg.amu$PIRLIMYCIN_DDD+max.agg.amu$CLOXACILLIN_DDD+max.agg.amu$BENZYLPENICILLIN_P_DDD+max.agg.amu$BENZYLPENICILLIN_B_DDD+max.agg.amu$TRIM_SULFADOXINE_DDD 
  
 #Cat3
-max.agg.amu$cat3_DCD <- max.agg.amu$CHLORTETRACYCLINE_DCD+max.agg.amu$OXYTETRACYCLINE_DCD+max.agg.amu$TETRACYCLINE_DCD+max.agg.amu$SUCCINYLSULFATHIAZOLE_DCD+max.agg.amu$SULFAGUANIDINE_DCD+max.agg.amu$SULFAMERAZINE_DCD+max.agg.amu$SULFAMETHAZINE_DCD+max.agg.amu$SULFANILAMIDE_DCD+max.agg.amu$SULFATHIAZOLE_DCD
+max.agg.amu$cat3_DCD <- max.agg.amu$CHLORTETRACYCLINE_DCD+max.agg.amu$OXYTETRACYCLINE_DCD+max.agg.amu$TETRACYCLINE_DCD+max.agg.amu$SUCCINYLSULFATHIAZOLE_DCD+max.agg.amu$SULFAGUANIDINE_DCD+max.agg.amu$SULFAMERAZINE_DCD+max.agg.amu$SULFAMETHAZINE_DCD+max.agg.amu$SULFANILAMIDE_DCD+max.agg.amu$SULFATHIAZOLE_DCD+max.agg.amu$FLORFENICOL_DCD
 
-max.agg.amu$cat3_DDD <- max.agg.amu$CHLORTETRACYCLINE_DDD+max.agg.amu$OXYTETRACYCLINE_DDD+max.agg.amu$TETRACYCLINE_DDD+max.agg.amu$SUCCINYLSULFATHIAZOLE_DDD+max.agg.amu$SULFAGUANIDINE_DDD+max.agg.amu$SULFAMERAZINE_DDD+max.agg.amu$SULFAMETHAZINE_DDD+max.agg.amu$SULFANILAMIDE_DDD+max.agg.amu$SULFATHIAZOLE_DDD 
+max.agg.amu$cat3_DDD <- max.agg.amu$CHLORTETRACYCLINE_DDD+max.agg.amu$OXYTETRACYCLINE_DDD+max.agg.amu$TETRACYCLINE_DDD+max.agg.amu$SUCCINYLSULFATHIAZOLE_DDD+max.agg.amu$SULFAGUANIDINE_DDD+max.agg.amu$SULFAMERAZINE_DDD+max.agg.amu$SULFAMETHAZINE_DDD+max.agg.amu$SULFANILAMIDE_DDD+max.agg.amu$SULFATHIAZOLE_DDD+max.agg.amu$FLORFENICOL_DCD 
 
+#By family
+#Penicillins with extended spectrum
+max.agg.amu$PenES_DCD <- max.agg.amu$AMPICILLIN_DCD
+max.agg.amu$PenES_DDD <- max.agg.amu$AMPICILLIN_DDD
+
+#Beta-lactamase resistant penicillins
+max.agg.amu$BLResPen_DCD <- max.agg.amu$CLOXACILLIN_DCD
+max.agg.amu$BLResPen_DDD <- max.agg.amu$CLOXACILLIN_DDD
+
+#Beta-lactamase sensitive penicillins
+max.agg.amu$BLSensPen_DCD <- max.agg.amu$BENZYLPENICILLIN_P_DCD + max.agg.amu$BENZYLPENICILLIN_B_DCD
+max.agg.amu$BLSensPen_DDD <- max.agg.amu$BENZYLPENICILLIN_P_DDD + max.agg.amu$BENZYLPENICILLIN_B_DDD
+
+#First generation cephalosporin
+max.agg.amu$FGCeph_DCD <- max.agg.amu$CEFAPIRIN_DCD
+max.agg.amu$FGCeph_DDD <- max.agg.amu$CEFAPIRIN_DDD
+
+#Third-generation cephalosporins
+max.agg.amu$TGCeph_DCD <- max.agg.amu$CEFTIOFUR_DCD
+max.agg.amu$TGCeph_DDD <- max.agg.amu$CEFTIOFUR_DDD
+
+#Fluoroquinolones
+max.agg.amu$Fluoro_DCD <- max.agg.amu$DANOFLOXACIN_DCD + max.agg.amu$ENROFLOXACIN_DCD + max.agg.amu$MARBOFLOXACIN_DCD
+max.agg.amu$Fluoro_DDD <- max.agg.amu$DANOFLOXACIN_DDD + max.agg.amu$ENROFLOXACIN_DDD + max.agg.amu$MARBOFLOXACIN_DDD
+
+#Amphenicols
+max.agg.amu$Amph_DCD <- max.agg.amu$FLORFENICOL_DCD
+max.agg.amu$Amph_DDD <- max.agg.amu$FLORFENICOL_DDD
+
+#Macrolides
+max.agg.amu$Macr_DCD <- max.agg.amu$GAMITROMYCIN_DCD + max.agg.amu$TILMICOSIN_DCD + max.agg.amu$TILDIPIROSIN_DCD + max.agg.amu$TYLOSIN_DCD + max.agg.amu$TULATHROMYCIN_DCD
+max.agg.amu$Macr_DDD <- max.agg.amu$GAMITROMYCIN_DDD + max.agg.amu$TILMICOSIN_DDD + max.agg.amu$TILDIPIROSIN_DDD + max.agg.amu$TYLOSIN_DDD + max.agg.amu$TULATHROMYCIN_DDD
+
+#Tetracyclines
+max.agg.amu$Tetr_DCD <- max.agg.amu$CHLORTETRACYCLINE_DCD + max.agg.amu$OXYTETRACYCLINE_DCD + max.agg.amu$TETRACYCLINE_DCD
+max.agg.amu$Tetr_DDD <- max.agg.amu$CHLORTETRACYCLINE_DDD + max.agg.amu$OXYTETRACYCLINE_DDD + max.agg.amu$TETRACYCLINE_DDD
+
+#Aminoglycosides
+max.agg.amu$Amin_DCD <- max.agg.amu$NEOMYCIN_SULF_DCD +  max.agg.amu$STREPTOMYCIN_SULF_DCD + max.agg.amu$DIHYDROSTREPTOMYCIN_DCD
+max.agg.amu$Amin_DDD <- max.agg.amu$NEOMYCIN_SULF_DDD +  max.agg.amu$STREPTOMYCIN_SULF_DDD + max.agg.amu$DIHYDROSTREPTOMYCIN_DDD
+
+#Sulfonamides
+max.agg.amu$Sulf_DCD <- max.agg.amu$SULFANILAMIDE_DCD + max.agg.amu$SULFATHIAZOLE_DCD + max.agg.amu$SULFAMETHAZINE_DCD + max.agg.amu$SULFAMERAZINE_DCD + max.agg.amu$SULFAGUANIDINE_DCD + max.agg.amu$SUCCINYLSULFATHIAZOLE_DCD
+max.agg.amu$Sulf_DDD <- max.agg.amu$SULFANILAMIDE_DDD + max.agg.amu$SULFATHIAZOLE_DDD + max.agg.amu$SULFAMETHAZINE_DDD + max.agg.amu$SULFAMERAZINE_DDD + max.agg.amu$SULFAGUANIDINE_DDD + max.agg.amu$SUCCINYLSULFATHIAZOLE_DDD
+
+#Lincosamides
+max.agg.amu$Linco_DCD <- max.agg.amu$PIRLIMYCIN_DCD
+max.agg.amu$Linco_DDD <- max.agg.amu$PIRLIMYCIN_DDD
+
+#Polymyxins
+max.agg.amu$Poly_DCD <- max.agg.amu$POLYMYXINB_SULF_DCD
+max.agg.amu$Poly_DDD <- max.agg.amu$POLYMYXINB_SULF_DDD
+
+#TMS
+max.agg.amu$TMS_DCD <- max.agg.amu$TRIM_SULFADOXINE_DCD
+max.agg.amu$TMS_DDD <- max.agg.amu$TRIM_SULFADOXINE_DDD
 
 
 ```
 
-### Standardization par 100 vaches-année
+**Standardization par 100 vaches-année**
 Présentement, les indices sont en nombre absolus de DDDbovCA et DCDbovCA. Ces valeurs doivent être standardisées par unité de production pour pouvoir avoir des **taux d'utilisation**. Dans le futur (avec les ajouts de champs dans Vet Expert), ce pourra seulement être le nombre d'animaux de <24 mois, le nombre d'animaux de >24 mois, ou la somme des deux (i.e. nombre d'animaux total). **Pour le moment, je prendrais le nombre d'animaux total comme dénominateur.**
   
 ```{r}
-#calculer le nombre total d'animaux
-max.agg.amu$denom <- max.agg.amu$Nb_veau+max.agg.amu$Nb_taure+max.agg.amu$Nb_vch1+max.agg.amu$Nb_vch2+max.agg.amu$Nb_tarie+max.agg.amu$Nb_taureau
+#calculer le nombre total de vaches adultes
+max.agg.amu$denom <- max.agg.amu$Nb_vch1+max.agg.amu$Nb_vch2+max.agg.amu$Nb_tarie
 
 #Diviser les valeurs absolues par le nombre d'animaux
 #DCD
@@ -375,10 +448,27 @@ max.agg.amu$NEOMYCIN_SULF_DCD <- max.agg.amu$NEOMYCIN_SULF_DCD/max.agg.amu$denom
 max.agg.amu$SULFAMERAZINE_DCD <- max.agg.amu$SULFAMERAZINE_DCD/max.agg.amu$denom*100
 max.agg.amu$SULFAGUANIDINE_DCD <- max.agg.amu$SULFAGUANIDINE_DCD/max.agg.amu$denom*100
 max.agg.amu$SUCCINYLSULFATHIAZOLE_DCD <- max.agg.amu$SUCCINYLSULFATHIAZOLE_DCD/max.agg.amu$denom*100
+max.agg.amu$FLORFENICOL_DCD <- max.agg.amu$FLORFENICOL_DCD/max.agg.amu$denom*100
+
 max.agg.amu$total_DCD <- max.agg.amu$total_DCD/max.agg.amu$denom*100
 max.agg.amu$cat1_DCD <- max.agg.amu$cat1_DCD/max.agg.amu$denom*100
 max.agg.amu$cat2_DCD <- max.agg.amu$cat2_DCD/max.agg.amu$denom*100
 max.agg.amu$cat3_DCD <- max.agg.amu$cat3_DCD/max.agg.amu$denom*100
+
+max.agg.amu$PenES_DCD <- max.agg.amu$PenES_DCD/max.agg.amu$denom*100
+max.agg.amu$BLResPen_DCD <- max.agg.amu$BLResPen_DCD/max.agg.amu$denom*100
+max.agg.amu$BLSensPen_DCD <- max.agg.amu$BLSensPen_DCD/max.agg.amu$denom*100
+max.agg.amu$FGCeph_DCD <- max.agg.amu$FGCeph_DCD/max.agg.amu$denom*100
+max.agg.amu$TGCeph_DCD <- max.agg.amu$TGCeph_DCD/max.agg.amu$denom*100
+max.agg.amu$Fluoro_DCD <- max.agg.amu$Fluoro_DCD/max.agg.amu$denom*100
+max.agg.amu$Amph_DCD <- max.agg.amu$Amph_DCD/max.agg.amu$denom*100
+max.agg.amu$Macr_DCD <- max.agg.amu$Macr_DCD/max.agg.amu$denom*100
+max.agg.amu$Tetr_DCD <- max.agg.amu$Tetr_DCD/max.agg.amu$denom*100
+max.agg.amu$Amin_DCD <- max.agg.amu$Amin_DCD/max.agg.amu$denom*100
+max.agg.amu$Sulf_DCD <- max.agg.amu$Sulf_DCD/max.agg.amu$denom*100
+max.agg.amu$Linco_DCD <- max.agg.amu$Linco_DCD/max.agg.amu$denom*100
+max.agg.amu$Poly_DCD <- max.agg.amu$Poly_DCD/max.agg.amu$denom*100
+max.agg.amu$TMS_DCD <- max.agg.amu$TMS_DCD/max.agg.amu$denom*100
 
 #DDD
 max.agg.amu$TYLOSIN_DDD <- max.agg.amu$TYLOSIN_DDD/max.agg.amu$denom*100
@@ -410,20 +500,42 @@ max.agg.amu$NEOMYCIN_SULF_DDD <- max.agg.amu$NEOMYCIN_SULF_DDD/max.agg.amu$denom
 max.agg.amu$SULFAMERAZINE_DDD <- max.agg.amu$SULFAMERAZINE_DDD/max.agg.amu$denom*100
 max.agg.amu$SULFAGUANIDINE_DDD <- max.agg.amu$SULFAGUANIDINE_DDD/max.agg.amu$denom*100
 max.agg.amu$SUCCINYLSULFATHIAZOLE_DDD <- max.agg.amu$SUCCINYLSULFATHIAZOLE_DDD/max.agg.amu$denom*100
+max.agg.amu$FLORFENICOL_DDD <- max.agg.amu$FLORFENICOL_DDD/max.agg.amu$denom*100
+
 max.agg.amu$total_DDD <- max.agg.amu$total_DDD/max.agg.amu$denom*100
 max.agg.amu$cat1_DDD <- max.agg.amu$cat1_DDD/max.agg.amu$denom*100
 max.agg.amu$cat2_DDD <- max.agg.amu$cat2_DDD/max.agg.amu$denom*100
 max.agg.amu$cat3_DDD <- max.agg.amu$cat3_DDD/max.agg.amu$denom*100
 
+max.agg.amu$PenES_DDD <- max.agg.amu$PenES_DDD/max.agg.amu$denom*100
+max.agg.amu$BLResPen_DDD <- max.agg.amu$BLResPen_DDD/max.agg.amu$denom*100
+max.agg.amu$BLSensPen_DDD <- max.agg.amu$BLSensPen_DDD/max.agg.amu$denom*100
+max.agg.amu$FGCeph_DDD <- max.agg.amu$FGCeph_DDD/max.agg.amu$denom*100
+max.agg.amu$TGCeph_DDD <- max.agg.amu$TGCeph_DDD/max.agg.amu$denom*100
+max.agg.amu$Fluoro_DDD <- max.agg.amu$Fluoro_DDD/max.agg.amu$denom*100
+max.agg.amu$Amph_DDD <- max.agg.amu$Amph_DDD/max.agg.amu$denom*100
+max.agg.amu$Macr_DDD <- max.agg.amu$Macr_DDD/max.agg.amu$denom*100
+max.agg.amu$Tetr_DDD <- max.agg.amu$Tetr_DDD/max.agg.amu$denom*100
+max.agg.amu$Amin_DDD <- max.agg.amu$Amin_DDD/max.agg.amu$denom*100
+max.agg.amu$Sulf_DDD <- max.agg.amu$Sulf_DDD/max.agg.amu$denom*100
+max.agg.amu$Linco_DDD <- max.agg.amu$Linco_DDD/max.agg.amu$denom*100
+max.agg.amu$Poly_DDD <- max.agg.amu$Poly_DDD/max.agg.amu$denom*100
+max.agg.amu$TMS_DDD <- max.agg.amu$TMS_DDD/max.agg.amu$denom*100
+```
+  
+Avant de finaliser la table, je vais retirer les nombres d'animaux afin d'éviter tout recoupement qui pourrait mener à un bris de confidentialité. Puis j'enregistre la table.  
+  
+```{r}
+max.agg.amu2 <- max.agg.amu[ -c(64:72, 109) ]
 
-write.csv(max.agg.amu,"data/max.csv", row.names = FALSE)
+write.csv(max.agg.amu2,"data/max.csv", row.names = FALSE)
 ```
 
 
 ### Utilisation par ferme-année
 
 ```{r}
-#Then summarize by farm and year aonly. This will be the table with the minimum possibilities in term of exploding the data.
+#Then summarize by farm and year only. This will be the table with the minimum possibilities in term of exploding the data.
 min.agg.amu <- setNames(
   aggregate(
     cbind(AMU$TYLOSIN_DCD, 
@@ -455,6 +567,7 @@ min.agg.amu <- setNames(
           AMU$SULFAMERAZINE_DCD, 
           AMU$SULFAGUANIDINE_DCD, 
           AMU$SUCCINYLSULFATHIAZOLE_DCD,
+          AMU$FLORFENICOL_DCD,
          
           AMU$TYLOSIN_DDD, 
           AMU$CHLORTETRACYCLINE_DDD, 
@@ -484,8 +597,8 @@ min.agg.amu <- setNames(
           AMU$NEOMYCIN_SULF_DDD, 
           AMU$SULFAMERAZINE_DDD, 
           AMU$SULFAGUANIDINE_DDD, 
-          AMU$SUCCINYLSULFATHIAZOLE_DDD
-          ), 
+          AMU$SUCCINYLSULFATHIAZOLE_DDD,
+          AMU$FLORFENICOL_DDD), 
     by=list(AMU$Year, AMU$No.ferme), FUN=sum),
   c( "Year",
      "No.Ferme",
@@ -518,6 +631,7 @@ min.agg.amu <- setNames(
      "SULFAMERAZINE_DCD", 
      "SULFAGUANIDINE_DCD", 
      "SUCCINYLSULFATHIAZOLE_DCD",
+     "FLORFENICOL_DCD",
      
      "TYLOSIN_DDD",
      "CHLORTETRACYCLINE_DDD",
@@ -547,7 +661,8 @@ min.agg.amu <- setNames(
      "NEOMYCIN_SULF_DDD", 
      "SULFAMERAZINE_DDD", 
      "SULFAGUANIDINE_DDD", 
-     "SUCCINYLSULFATHIAZOLE_DDD"))
+     "SUCCINYLSULFATHIAZOLE_DDD",
+     "FLORFENICOL_DDD"))
 
 min.agg.amu.pos <- min.agg.amu
 min.agg.amu.pos[min.agg.amu.pos < 0] <- 0
@@ -575,12 +690,70 @@ min.agg.amu$cat2_DCD <- min.agg.amu$GAMITROMYCIN_DCD+min.agg.amu$TILDIPIROSIN_DC
 min.agg.amu$cat2_DDD <- min.agg.amu$GAMITROMYCIN_DDD+min.agg.amu$TILDIPIROSIN_DDD+min.agg.amu$TILMICOSIN_DDD+min.agg.amu$TULATHROMYCIN_DDD+min.agg.amu$TYLOSIN_DDD+min.agg.amu$DIHYDROSTREPTOMYCIN_DDD+min.agg.amu$NEOMYCIN_SULF_DDD+min.agg.amu$STREPTOMYCIN_SULF_DDD+min.agg.amu$AMPICILLIN_DDD+min.agg.amu$CEFAPIRIN_DDD+min.agg.amu$PIRLIMYCIN_DDD+min.agg.amu$CLOXACILLIN_DDD+min.agg.amu$BENZYLPENICILLIN_P_DDD+min.agg.amu$BENZYLPENICILLIN_B_DDD+min.agg.amu$TRIM_SULFADOXINE_DDD 
  
 #Cat3
-min.agg.amu$cat3_DCD <- min.agg.amu$CHLORTETRACYCLINE_DCD+min.agg.amu$OXYTETRACYCLINE_DCD+min.agg.amu$TETRACYCLINE_DCD+min.agg.amu$SUCCINYLSULFATHIAZOLE_DCD+min.agg.amu$SULFAGUANIDINE_DCD+min.agg.amu$SULFAMERAZINE_DCD+min.agg.amu$SULFAMETHAZINE_DCD+min.agg.amu$SULFANILAMIDE_DCD+min.agg.amu$SULFATHIAZOLE_DCD
+min.agg.amu$cat3_DCD <- min.agg.amu$CHLORTETRACYCLINE_DCD+min.agg.amu$OXYTETRACYCLINE_DCD+min.agg.amu$TETRACYCLINE_DCD+min.agg.amu$SUCCINYLSULFATHIAZOLE_DCD+min.agg.amu$SULFAGUANIDINE_DCD+min.agg.amu$SULFAMERAZINE_DCD+min.agg.amu$SULFAMETHAZINE_DCD+min.agg.amu$SULFANILAMIDE_DCD+min.agg.amu$SULFATHIAZOLE_DCD+min.agg.amu$FLORFENICOL_DCD
 
-min.agg.amu$cat3_DDD <- min.agg.amu$CHLORTETRACYCLINE_DDD+min.agg.amu$OXYTETRACYCLINE_DDD+min.agg.amu$TETRACYCLINE_DDD+min.agg.amu$SUCCINYLSULFATHIAZOLE_DDD+min.agg.amu$SULFAGUANIDINE_DDD+min.agg.amu$SULFAMERAZINE_DDD+min.agg.amu$SULFAMETHAZINE_DDD+min.agg.amu$SULFANILAMIDE_DDD+min.agg.amu$SULFATHIAZOLE_DDD 
+min.agg.amu$cat3_DDD <- min.agg.amu$CHLORTETRACYCLINE_DDD+min.agg.amu$OXYTETRACYCLINE_DDD+min.agg.amu$TETRACYCLINE_DDD+min.agg.amu$SUCCINYLSULFATHIAZOLE_DDD+min.agg.amu$SULFAGUANIDINE_DDD+min.agg.amu$SULFAMERAZINE_DDD+min.agg.amu$SULFAMETHAZINE_DDD+min.agg.amu$SULFANILAMIDE_DDD+min.agg.amu$SULFATHIAZOLE_DDD+min.agg.amu$FLORFENICOL_DDD 
+
+#By family
+#Penicillins with extended spectrum
+min.agg.amu$PenES_DCD <- min.agg.amu$AMPICILLIN_DCD
+min.agg.amu$PenES_DDD <- min.agg.amu$AMPICILLIN_DDD
+
+#Beta-lactamase resistant penicillins
+min.agg.amu$BLResPen_DCD <- min.agg.amu$CLOXACILLIN_DCD
+min.agg.amu$BLResPen_DDD <- min.agg.amu$CLOXACILLIN_DDD
+
+#Beta-lactamase sensitive penicillins
+min.agg.amu$BLSensPen_DCD <- min.agg.amu$BENZYLPENICILLIN_P_DCD + min.agg.amu$BENZYLPENICILLIN_B_DCD
+min.agg.amu$BLSensPen_DDD <- min.agg.amu$BENZYLPENICILLIN_P_DDD + min.agg.amu$BENZYLPENICILLIN_B_DDD
+
+#First generation cephalosporin
+min.agg.amu$FGCeph_DCD <- min.agg.amu$CEFAPIRIN_DCD
+min.agg.amu$FGCeph_DDD <- min.agg.amu$CEFAPIRIN_DDD
+
+#Third-generation cephalosporins
+min.agg.amu$TGCeph_DCD <- min.agg.amu$CEFTIOFUR_DCD
+min.agg.amu$TGCeph_DDD <- min.agg.amu$CEFTIOFUR_DDD
+
+#Fluoroquinolones
+min.agg.amu$Fluoro_DCD <- min.agg.amu$DANOFLOXACIN_DCD + min.agg.amu$ENROFLOXACIN_DCD + min.agg.amu$MARBOFLOXACIN_DCD
+min.agg.amu$Fluoro_DDD <- min.agg.amu$DANOFLOXACIN_DDD + min.agg.amu$ENROFLOXACIN_DDD + min.agg.amu$MARBOFLOXACIN_DDD
+
+#Amphenicols
+min.agg.amu$Amph_DCD <- min.agg.amu$FLORFENICOL_DCD
+min.agg.amu$Amph_DDD <- min.agg.amu$FLORFENICOL_DDD
+
+#Macrolides
+min.agg.amu$Macr_DCD <- min.agg.amu$GAMITROMYCIN_DCD + min.agg.amu$TILMICOSIN_DCD + min.agg.amu$TILDIPIROSIN_DCD + min.agg.amu$TYLOSIN_DCD + min.agg.amu$TULATHROMYCIN_DCD
+min.agg.amu$Macr_DDD <- min.agg.amu$GAMITROMYCIN_DDD + min.agg.amu$TILMICOSIN_DDD + min.agg.amu$TILDIPIROSIN_DDD + min.agg.amu$TYLOSIN_DDD + min.agg.amu$TULATHROMYCIN_DDD
+
+#Tetracyclines
+min.agg.amu$Tetr_DCD <- min.agg.amu$CHLORTETRACYCLINE_DCD + min.agg.amu$OXYTETRACYCLINE_DCD + min.agg.amu$TETRACYCLINE_DCD
+min.agg.amu$Tetr_DDD <- min.agg.amu$CHLORTETRACYCLINE_DDD + min.agg.amu$OXYTETRACYCLINE_DDD + min.agg.amu$TETRACYCLINE_DDD
+
+#Aminoglycosides
+min.agg.amu$Amin_DCD <- min.agg.amu$NEOMYCIN_SULF_DCD +  min.agg.amu$STREPTOMYCIN_SULF_DCD + min.agg.amu$DIHYDROSTREPTOMYCIN_DCD
+min.agg.amu$Amin_DDD <- min.agg.amu$NEOMYCIN_SULF_DDD +  min.agg.amu$STREPTOMYCIN_SULF_DDD + min.agg.amu$DIHYDROSTREPTOMYCIN_DDD
+
+#Sulfonamides
+min.agg.amu$Sulf_DCD <- min.agg.amu$SULFANILAMIDE_DCD + min.agg.amu$SULFATHIAZOLE_DCD + min.agg.amu$SULFAMETHAZINE_DCD + min.agg.amu$SULFAMERAZINE_DCD + min.agg.amu$SULFAGUANIDINE_DCD + min.agg.amu$SUCCINYLSULFATHIAZOLE_DCD
+min.agg.amu$Sulf_DDD <- min.agg.amu$SULFANILAMIDE_DDD + min.agg.amu$SULFATHIAZOLE_DDD + min.agg.amu$SULFAMETHAZINE_DDD + min.agg.amu$SULFAMERAZINE_DDD + min.agg.amu$SULFAGUANIDINE_DDD + min.agg.amu$SUCCINYLSULFATHIAZOLE_DDD
+
+#Lincosamides
+min.agg.amu$Linco_DCD <- min.agg.amu$PIRLIMYCIN_DCD
+min.agg.amu$Linco_DDD <- min.agg.amu$PIRLIMYCIN_DDD
+
+#Polymyxins
+min.agg.amu$Poly_DCD <- min.agg.amu$POLYMYXINB_SULF_DCD
+min.agg.amu$Poly_DDD <- min.agg.amu$POLYMYXINB_SULF_DDD
+
+#TMS
+min.agg.amu$TMS_DCD <- min.agg.amu$TRIM_SULFADOXINE_DCD
+min.agg.amu$TMS_DDD <- min.agg.amu$TRIM_SULFADOXINE_DDD
+
 
 #calculer le nombre total d'animaux
-min.agg.amu$denom <- min.agg.amu$Nb_veau+min.agg.amu$Nb_taure+min.agg.amu$Nb_vch1+min.agg.amu$Nb_vch2+min.agg.amu$Nb_tarie+min.agg.amu$Nb_taureau
+min.agg.amu$denom <- min.agg.amu$Nb_vch1+min.agg.amu$Nb_vch2+min.agg.amu$Nb_tarie
 
 #Diviser les valeurs absolues par le nombre d'animaux
 #DCD
@@ -612,11 +785,29 @@ min.agg.amu$TETRACYCLINE_DCD <- min.agg.amu$TETRACYCLINE_DCD/min.agg.amu$denom*1
 min.agg.amu$NEOMYCIN_SULF_DCD <- min.agg.amu$NEOMYCIN_SULF_DCD/min.agg.amu$denom*100
 min.agg.amu$SULFAMERAZINE_DCD <- min.agg.amu$SULFAMERAZINE_DCD/min.agg.amu$denom*100
 min.agg.amu$SULFAGUANIDINE_DCD <- min.agg.amu$SULFAGUANIDINE_DCD/min.agg.amu$denom*100
-min.agg.amu$SUCCINYLSULFATHIAZOLE_DCD <- min.agg.amu$SUCCINYLSULFATHIAZOLE_DCD/min.agg.amu$denom*100
+min.agg.amu$FLORFENICOL_DCD <- min.agg.amu$FLORFENICOL_DCD/min.agg.amu$denom*100
+
 min.agg.amu$total_DCD <- min.agg.amu$total_DCD/min.agg.amu$denom*100
 min.agg.amu$cat1_DCD <- min.agg.amu$cat1_DCD/min.agg.amu$denom*100
 min.agg.amu$cat2_DCD <- min.agg.amu$cat2_DCD/min.agg.amu$denom*100
 min.agg.amu$cat3_DCD <- min.agg.amu$cat3_DCD/min.agg.amu$denom*100
+
+min.agg.amu$PenES_DCD <- min.agg.amu$PenES_DCD/min.agg.amu$denom*100
+min.agg.amu$BLResPen_DCD <- min.agg.amu$BLResPen_DCD/min.agg.amu$denom*100
+min.agg.amu$BLSensPen_DCD <- min.agg.amu$BLSensPen_DCD/min.agg.amu$denom*100
+min.agg.amu$FGCeph_DCD <- min.agg.amu$FGCeph_DCD/min.agg.amu$denom*100
+min.agg.amu$TGCeph_DCD <- min.agg.amu$TGCeph_DCD/min.agg.amu$denom*100
+min.agg.amu$Fluoro_DCD <- min.agg.amu$Fluoro_DCD/min.agg.amu$denom*100
+min.agg.amu$Amph_DCD <- min.agg.amu$Amph_DCD/min.agg.amu$denom*100
+min.agg.amu$Macr_DCD <- min.agg.amu$Macr_DCD/min.agg.amu$denom*100
+min.agg.amu$Tetr_DCD <- min.agg.amu$Tetr_DCD/min.agg.amu$denom*100
+min.agg.amu$Amin_DCD <- min.agg.amu$Amin_DCD/min.agg.amu$denom*100
+min.agg.amu$Sulf_DCD <- min.agg.amu$Sulf_DCD/min.agg.amu$denom*100
+min.agg.amu$Linco_DCD <- min.agg.amu$Linco_DCD/min.agg.amu$denom*100
+min.agg.amu$Poly_DCD <- min.agg.amu$Poly_DCD/min.agg.amu$denom*100
+min.agg.amu$TMS_DCD <- min.agg.amu$TMS_DCD/min.agg.amu$denom*100
+
+
 
 #DDD
 min.agg.amu$TYLOSIN_DDD <- min.agg.amu$TYLOSIN_DDD/min.agg.amu$denom*100
@@ -647,14 +838,33 @@ min.agg.amu$TETRACYCLINE_DDD <- min.agg.amu$TETRACYCLINE_DDD/min.agg.amu$denom*1
 min.agg.amu$NEOMYCIN_SULF_DDD <- min.agg.amu$NEOMYCIN_SULF_DDD/min.agg.amu$denom*100
 min.agg.amu$SULFAMERAZINE_DDD <- min.agg.amu$SULFAMERAZINE_DDD/min.agg.amu$denom*100
 min.agg.amu$SULFAGUANIDINE_DDD <- min.agg.amu$SULFAGUANIDINE_DDD/min.agg.amu$denom*100
-min.agg.amu$SUCCINYLSULFATHIAZOLE_DDD <- min.agg.amu$SUCCINYLSULFATHIAZOLE_DDD/min.agg.amu$denom*100
+min.agg.amu$FLORFENICOL_DDD <- min.agg.amu$FLORFENICOL_DDD/min.agg.amu$denom*100
+
 min.agg.amu$total_DDD <- min.agg.amu$total_DDD/min.agg.amu$denom*100
 min.agg.amu$cat1_DDD <- min.agg.amu$cat1_DDD/min.agg.amu$denom*100
 min.agg.amu$cat2_DDD <- min.agg.amu$cat2_DDD/min.agg.amu$denom*100
 min.agg.amu$cat3_DDD <- min.agg.amu$cat3_DDD/min.agg.amu$denom*100
 
+min.agg.amu$PenES_DDD <- min.agg.amu$PenES_DDD/min.agg.amu$denom*100
+min.agg.amu$BLResPen_DDD <- min.agg.amu$BLResPen_DDD/min.agg.amu$denom*100
+min.agg.amu$BLSensPen_DDD <- min.agg.amu$BLSensPen_DDD/min.agg.amu$denom*100
+min.agg.amu$FGCeph_DDD <- min.agg.amu$FGCeph_DDD/min.agg.amu$denom*100
+min.agg.amu$TGCeph_DDD <- min.agg.amu$TGCeph_DDD/min.agg.amu$denom*100
+min.agg.amu$Fluoro_DDD <- min.agg.amu$Fluoro_DDD/min.agg.amu$denom*100
+min.agg.amu$Amph_DDD <- min.agg.amu$Amph_DDD/min.agg.amu$denom*100
+min.agg.amu$Macr_DDD <- min.agg.amu$Macr_DDD/min.agg.amu$denom*100
+min.agg.amu$Tetr_DDD <- min.agg.amu$Tetr_DDD/min.agg.amu$denom*100
+min.agg.amu$Amin_DDD <- min.agg.amu$Amin_DDD/min.agg.amu$denom*100
+min.agg.amu$Sulf_DDD <- min.agg.amu$Sulf_DDD/min.agg.amu$denom*100
+min.agg.amu$Linco_DDD <- min.agg.amu$Linco_DDD/min.agg.amu$denom*100
+min.agg.amu$Poly_DDD <- min.agg.amu$Poly_DDD/min.agg.amu$denom*100
+min.agg.amu$TMS_DDD <- min.agg.amu$TMS_DDD/min.agg.amu$denom*100
 
-write.csv(min.agg.amu,"data/min.csv", row.names = FALSE)
+
+
+min.agg.amu2 <- min.agg.amu[ -c(63:71, 108) ]
+
+write.csv(min.agg.amu2,"data/min.csv", row.names = FALSE)
 
 ```
-
+  
